--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -60,3 +60,21 @@
         background: black;
     }
 }
+
+
+@media screen and (max-width: 991px) {
+    .welcomeText {
+        font-size: 2rem !important;
+        width: 90% !important;
+    }
+    .welcomeSubText{
+        font-size: 1rem !important;
+        width: 90% !important;
+    }
+    .contributorsTitle{
+        font-size: 1.6rem !important;
+    }
+    .contributorsSubTitle{
+        font-size: 1.2rem !important;
+    }
+}
