[fix] mobile view

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -45,3 +45,23 @@
         }
     }
 }
+
+@media screen and (max-width: 991px) {
+    .toolbarRoot {
+        display: flex;
+        flex-direction: column;
+    }
+    .hacktoberfestText{
+        display: none;
+    }
+    .appbarSponsors{
+        height: auto;
+        width: 100%;
+        border-left: none !important;
+        margin: 0px !important;
+        padding: 0px !important;
+    }
+    .footer{
+        display: none;
+    }
+}
